--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -237,5 +237,9 @@ bTickPhysicsAsync=True
 AsyncFixedTimeStepSize=0.000100
 MaxPhysicsDeltaTime=0.030000
 SyncSceneSmoothingFactor=0.500000
-SolverOptions=(PositionIterations=8,VelocityIterations=2,ProjectionIterations=1,CollisionMarginFraction=0.050000,CollisionMarginMax=10.000000,CollisionCullDistance=3.000000,CollisionMaxPushOutVelocity=200.000000,CollisionInitialOverlapDepenetrationVelocity=200.000000,ClusterConnectionFactor=1.000000,ClusterUnionConnectionType=DelaunayTriangulation,bGenerateCollisionData=False,CollisionFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinImpulse=0.000000),bGenerateBreakData=False,BreakingFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinVolume=0.000000),bGenerateTrailingData=False,TrailingFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinVolume=0.000000))
+SolverOptions=(PositionIterations=8,VelocityIterations=4,ProjectionIterations=2,CollisionMarginFraction=0.050000,CollisionMarginMax=10.000000,CollisionCullDistance=3.000000,CollisionMaxPushOutVelocity=200.000000,CollisionInitialOverlapDepenetrationVelocity=200.000000,ClusterConnectionFactor=1.000000,ClusterUnionConnectionType=DelaunayTriangulation,bGenerateCollisionData=False,CollisionFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinImpulse=0.000000),bGenerateBreakData=False,BreakingFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinVolume=0.000000),bGenerateTrailingData=False,TrailingFilterSettings=(FilterEnabled=False,MinMass=0.000000,MinSpeed=0.000000,MinVolume=0.000000))
+BounceThresholdVelocity=2000.000000
+FrictionCombineMode=Multiply
+MaxAngularVelocity=360.000000
+MaxDepenetrationVelocity=10000.000000
 
