--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Levels/GAT2023.GAT2023
 EditorStartupMap=/Game/Levels/GAT2023.GAT2023
+GlobalDefaultGameMode=/Game/BluePrints/DataManagement/BP_DataManager.BP_DataManager_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
