--- a/Mini4wd_sim.uproject
+++ b/Mini4wd_sim.uproject
@@ -23,6 +23,10 @@
 			"Name": "TcpSocketPlugin",
 			"Enabled": true,
 			"MarketplaceURL": "com.epicgames.launcher://ue/marketplace/content/462c2952e71c4548ae324cb624c74aa6"
+		},
+		{
+			"Name": "VictoryBPLibrary",
+			"Enabled": true
 		}
 	]
 }
