--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Levels/GAT2023.GAT2023
+GameDefaultMap=/Game/Levels/CourseBuilding.CourseBuilding
 EditorStartupMap=/Game/Levels/GAT2023.GAT2023
 GlobalDefaultGameMode=/Game/BluePrints/DataManagement/BP_DataManager.BP_DataManager_C
 
