--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -84,4 +84,5 @@ DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.Defaul
 -ConsoleKeys=Tilde
 +ConsoleKeys=Tilde
 +ConsoleKeys=Caret
++ConsoleKeys=Tab
 
