Linux向けにパッケージングする準備

--- a/Mini4wd_sim.uproject
+++ b/Mini4wd_sim.uproject
@@ -3,6 +3,16 @@
 	"EngineAssociation": "5.4",
 	"Category": "",
 	"Description": "",
+	"Modules": [
+		{
+			"Name": "Mini4wd_sim",
+			"Type": "Runtime",
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
+		}
+	],
 	"Plugins": [
 		{
 			"Name": "ModelingToolsEditorMode",
@@ -28,5 +38,10 @@
 			"Name": "VictoryBPLibrary",
 			"Enabled": true
 		}
+	],
+	"TargetPlatforms": [
+		"Linux",
+		"Windows",
+		"LinuxArm64"
 	]
 }
