TCPソケットプラグインをプロジェクト内部に移行

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,8 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=42B694944430916035ECEE8F7C460E4B
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+FullRebuild=True
+IncludeAppLocalPrerequisites=True
+
